--- a/index.html
+++ b/index.html
@@ -8,23 +8,27 @@
 </head>
 <body>
     <header>
+        <figure>
             <img src="./img/logo-mighty-ducks-01.png" alt="logo" width="200px">
-            
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="./templates/aboutMDHL.html">About MDHL</a></li>
-                    <li><a href="./templates/contact.html">Contact</a></li>
-                </ul>
-            </nav>
+            <figcaption>Fotos reales de Hockey</figcaption>
+        </figure>
+
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="./templates/aboutMDHL.html">About MDHL</a></li>
+                <li><a href="./templates/contact.html">Contact</a></li>
+            </ul>
+        </nav>
             
             <h1>Logo Mighty Ducks</h1>
         </header>
+
         <main>
             <article>
                 <img src="./img/hockey1.jpg" alt="logo" width="200px">
 
-                <h2>Upcoming Events</h2>
+                <h2><i>Upcoming Events</i></h2>
 
                 <h3>August 4</h3>
                 <p>MDSL Fundraiser</p>
