--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <img src="./img/logo-mighty-ducks-01.png" alt="logo" width="200px">
+
+        <figure>
+            <img src="./img/logo-mighty-ducks-01.png" alt="logo" width="200">
+        </figure>
         
         <nav>
             <ul>
@@ -24,11 +27,11 @@
     <main>
         <article>
             <figure>
-                <img src="./img/hockey1.jpg" alt="hockey1" width="200px">
+                <img src="./img/hockey1.jpg" alt="hockey1" width="200">
                 <figcaption>Fotos reales de Hockey</figcaption>
             </figure>
 
-            <h2><i>Upcoming Events</i></h2>
+            <h2>Upcoming Events</h2>
 
             <h3>August 4</h3>
             <p>MDSL Fundraiser</p>
