--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
 
         <figure>
-            <img src="./img/logo-mighty-ducks-01.png" alt="logo" width="200">
+            <img src="./assets/images/logo-mighty-ducks-01.png" alt="logo" width="200">
         </figure>
         
         <nav>
@@ -21,13 +21,13 @@
             </ul>
         </nav>
             
-        <h1>Logo Mighty Ducks</h1>
+        <h1>Mighty Ducks Hockey League</h1>
     </header>
 
     <main>
         <article>
             <figure>
-                <img src="./img/hockey1.jpg" alt="hockey1" width="200">
+                <img src="./assets/images/hockey1.jpg" alt="hockey1" width="200">
                 <figcaption>Fotos reales de Hockey</figcaption>
             </figure>
 
