diseño2 finalizado solo index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- estilos de diseño N°1 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
     <link rel="stylesheet" href="./assets/styles/design1.css">
     <!-- Estilo ocultos-->
     <!-- estilos de diseño N°2 -->
@@ -17,48 +19,41 @@
 
 <body>
     <header>
-        <section class="banner"> <!-- borrar banner class y usar figure para height-->
-            <figure>
-                <img src="./assets/images/design1_image1.jpg" alt="banner"> <!--se puede usar background.img: url()-->
-            </figure> 
-        </section>
-        <h1>Mighty Ducks Hockey League</h1>        
+        <figure class="banner">
+            <img src="./assets/images/design1_image1.jpg" alt="banner"> <!--se puede usar background.img: url()-->
+        </figure>
+        <h1>Mighty Ducks Hockey League</h1>
         <section class="subtitle"> <!--sino sirve borrar esta section, dejar h2-->
             <h2>Upcoming Events</h2>
-            <section class="logo"> <!-- puede tener class -->
-                <figure>
-                    <img src="./assets/images/logo-mighty-ducks-01.png" alt="logo">
-                </figure>
-            </section>    
+            <figure class="logo">
+                <img src="./assets/images/logo-mighty-ducks-01.png" alt="logo">
+            </figure>
         </section>
-        
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="./templates/aboutMDHL.html">About MDHL</a></li>
-            <li><a href="./templates/contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <article>
-            <h3>August 4</h3>
-            <p>MDSL Fundraiser</p>
-            <h3>August 16</h3>
-            <p>Season Kick-off: Meet the Teams</p>
-            <h3>September 1</h3>
-            <p>First Game of the Season (Check Game Schedule for details)</p>
-        </article>
-
-        <aside>
-            <figure>
-                <img src="./assets/images/hockey1.jpg" alt="hockey1">
-            </figure>  
-        </aside>
-    </main>
-
+    <section class="container-nav-main">
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="./templates/aboutMDHL.html">About MDHL</a></li>
+                <li><a href="./templates/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <main>
+            <article>
+                <h3>August 4</h3>
+                <p>MDSL Fundraiser</p>
+                <h3>August 16</h3>
+                <p>Season Kick-off: Meet the Teams</p>
+                <h3>September 1</h3>
+                <p>First Game of the Season (Check Game Schedule for details)</p>
+            </article>
+        </main>
+        <figure class="img-hockey" >
+            <img src="./assets/images/hockey1.jpg" alt="hockey1">
+        </figure>   
+        <!--esto va dentro de un aside?? preguntar a tutor-->
+    </section>
 </body>
 
 </html>
