se agrega .ico a diseño 1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
     <link rel="stylesheet" href="./assets/styles/design1.css">
+    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
     <!-- Estilo ocultos-->
     <!-- estilos de diseño N°2 -->
     <!--<link rel="stylesheet" href="./assets/styles/design2.css">-->
@@ -19,9 +20,8 @@
 
 <body>
     <header>
-        <figure class="banner">
-            <img src="./assets/images/design1_image1.jpg" alt="banner"> <!--se puede usar background.img: url()-->
-        </figure>
+        <section class="banner">
+        </section>
         <h1>Mighty Ducks Hockey League</h1>
         <section class="subtitle"> <!--sino sirve borrar esta section, dejar h2-->
             <h2>Upcoming Events</h2>
@@ -34,7 +34,7 @@
     <section class="container-nav-main">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#" class="a-home">Home</a></li>
                 <li><a href="./templates/aboutMDHL.html">About MDHL</a></li>
                 <li><a href="./templates/contact.html">Contact</a></li>
             </ul>
@@ -52,7 +52,6 @@
         <figure class="img-hockey" >
             <img src="./assets/images/hockey1.jpg" alt="hockey1">
         </figure>   
-        <!--esto va dentro de un aside?? preguntar a tutor-->
     </section>
 </body>
 
