--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
-    <link rel="stylesheet" href="./assets/styles/design1.css">
     <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/styles/design1.css">
     <!-- Estilo ocultos-->
     <!-- estilos de diseño N°2 -->
     <!--<link rel="stylesheet" href="./assets/styles/design2.css">-->
@@ -23,7 +23,7 @@
         <section class="banner">
         </section>
         <h1>Mighty Ducks Hockey League</h1>
-        <section class="subtitle"> <!--sino sirve borrar esta section, dejar h2-->
+        <section class="subtitle">
             <h2>Upcoming Events</h2>
             <figure class="logo">
                 <img src="./assets/images/logo-mighty-ducks-01.png" alt="logo">
