--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
     <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/styles/design1.css">
-    <!-- Estilo ocultos-->
+    <!-- estilos de diseño N°1 -->    
+    <!-- <link rel="stylesheet" href="./assets/styles/design1.css"> -->
     <!-- estilos de diseño N°2 -->
-    <!--<link rel="stylesheet" href="./assets/styles/design2.css">-->
+    <link rel="stylesheet" href="./assets/styles/design2.css">
     <!-- estilos de diseño N°3 -->
     <!--<link rel="stylesheet" href="./assets/styles/design3.css">-->
     <title>Mighty Ducks Hockey League</title>
