diseño2 terminado; d1 detalles agregados

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <section class="banner">
         </section>
-        <h1>Mighty Ducks Hockey League</h1>
+        <h1 class="h1">Mighty Ducks Hockey League</h1>
         <section class="subtitle">
             <h2>Upcoming Events</h2>
             <figure class="logo">
@@ -35,7 +35,7 @@
         <nav>
             <ul>
                 <li><a href="#" class="a-home">Home</a></li>
-                <li><a href="./templates/aboutMDHL.html">About MDHL</a></li>
+                <li><a href="./templates/aboutMDHL.html">About <span>MDHL</span></a></li>
                 <li><a href="./templates/contact.html">Contact</a></li>
             </ul>
         </nav>
