task 2 lista para entregar

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
     <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
     <!-- estilos de diseño N°1 -->    
-    <!-- <link rel="stylesheet" href="./assets/styles/design1.css"> -->
+    <link rel="stylesheet" href="./assets/styles/design1.css">
     <!-- estilos de diseño N°2 -->
-    <link rel="stylesheet" href="./assets/styles/design2.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/design2.css"> -->
     <!-- estilos de diseño N°3 -->
-    <!--<link rel="stylesheet" href="./assets/styles/design3.css">-->
+    <!-- <link rel="stylesheet" href="./assets/styles/design3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
     <header>
         <section class="banner">
+            <h1 class="h1">Mighty Ducks Hockey League</h1><!--estaba fuera de -->
         </section>
-        <h1 class="h1">Mighty Ducks Hockey League</h1>
         <section class="subtitle">
             <h2>Upcoming Events</h2>
             <figure class="logo">
@@ -30,8 +30,7 @@
             </figure>
         </section>
     </header>
-
-    <section class="container-nav-main">
+    <div class="container-nav-main">
         <nav>
             <ul>
                 <li><a href="#" class="a-home">Home</a></li>
@@ -39,20 +38,21 @@
                 <li><a href="./templates/contact.html">Contact</a></li>
             </ul>
         </nav>
-        <main>
-            <article>
-                <h3>August 4</h3>
-                <p>MDSL Fundraiser</p>
-                <h3>August 16</h3>
-                <p>Season Kick-off: Meet the Teams</p>
-                <h3>September 1</h3>
-                <p>First Game of the Season (Check Game Schedule for details)</p>
-            </article>
-        </main>
         <figure class="img-hockey" >
             <img src="./assets/images/hockey1.jpg" alt="hockey1">
         </figure>   
-    </section>
+    </div>
+    <main>
+        <article>
+            <h3>August 4</h3>
+            <p>MDSL Fundraiser</p>
+            <h3>August 16</h3>
+            <p>Season Kick-off: Meet the Teams</p>
+            <h3>September 1</h3>
+            <p>First Game of the Season (Check Game Schedule for details)</p>
+        </article>
+    </main>
+
 </body>
 
 </html>
