cambios en comentarios R2

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
     <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
     <!-- estilos de diseño N°1 -->    
-    <link rel="stylesheet" href="./assets/styles/design1.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/design1.css"> -->
     <!-- estilos de diseño N°2 -->
     <!-- <link rel="stylesheet" href="./assets/styles/design2.css"> -->
     <!-- estilos de diseño N°3 -->
-    <!-- <link rel="stylesheet" href="./assets/styles/design3.css"> -->
+    <link rel="stylesheet" href="./assets/styles/design3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
@@ -44,7 +44,7 @@
     </div>
     <main>
         <article>
-            <h3>August 4</h3>
+            <h3>August 4</h3> <!--🏑📅 usar la proxima--> 
             <p>MDSL Fundraiser</p>
             <h3>August 16</h3>
             <p>Season Kick-off: Meet the Teams</p>
