--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <li><a href="#" class="a-home">Home</a></li>
                 <li><a href="./templates/aboutMDHL.html">About <span>MDHL</span></a></li>
                 <li><a href="./templates/contact.html">Contact</a></li>
+                <li><a href="./templates/rules.html">Rules</a></li>
+                <li><a href="./templates/gameInfo.html">Game Infomation</a></li>
             </ul>
         </nav>
         <figure class="img-hockey" >
