cambios: fuente, se borra carpetas templates, se comienza table

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">    <!-- estilos de diseño N°1 -->
-    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">   <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
     <!-- estilos de diseño N°1 -->    
     <!-- <link rel="stylesheet" href="./assets/styles/design1.css"> -->
     <!-- estilos de diseño N°2 -->
@@ -32,13 +31,11 @@
     </header>
     <div class="container-nav-main">
         <nav>
-            <ul>
-                <li><a href="#" class="a-home">Home</a></li>
-                <li><a href="./templates/aboutMDHL.html">About <span>MDHL</span></a></li>
-                <li><a href="./templates/contact.html">Contact</a></li>
-                <li><a href="./templates/rules.html">Rules</a></li>
-                <li><a href="./templates/gameInfo.html">Game Infomation</a></li>
-            </ul>
+            <a href="#">Home</a>
+            <a href="./aboutMDHL.html">About <span>MDHL</span></a>
+            <a href="./contact.html">Contact</a>
+            <a href="./rules.html">Rules</a>
+            <a href="./gameInfo.html">Game Information</a>
         </nav>
         <figure class="img-hockey" >
             <img src="./assets/images/hockey1.jpg" alt="hockey1">
