--- a/gameInfo.html
+++ b/gameInfo.html
@@ -4,10 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
-        rel="stylesheet"> <!-- estilos de diseño N°1 -->
-    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
     <!-- estilos de diseño N°1 -->
     <!-- <link rel="stylesheet" href="./assets/styles/design1.css"> -->
     <!-- estilos de diseño N°2 -->
@@ -20,7 +17,7 @@
 <body>
     <header>
         <section class="banner">
-            <h1 class="h1">Mighty Ducks Hockey League</h1><!--estaba fuera de -->
+            <h1 class="h1">Mighty Ducks Hockey League</h1>
         </section>
         <section class="subtitle">
             <h2>Game Information</h2>
@@ -31,13 +28,11 @@
     </header>
     <div class="container-nav-main">
         <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../templates/aboutMDHL.html">About <span>MDHL</span></a></li>
-                <li><a href="../templates/contact.html">Contact</a></li>
-                <li><a href="../templates/rules.html">Rules</a></li>
-                <li><a href="#">Game Infomation</a></li>
-            </ul>
+            <a href="./index.html">Home</a>
+            <a href="./aboutMDHL.html">About <span>MDHL</span></a>
+            <a href="./contact.html">Contact</a>
+            <a href="./rules.html">Rules</a>
+            <a href="#">Game Information</a>
         </nav>
         <figure class="img-hockey">
             <img src="./assets/images/hockey1.jpg" alt="hockey1">
@@ -46,64 +41,70 @@
     <main>
         <article>
             <h3>MIGHTY DUCKS HOCKEY LEAGUE</h3>
-            <p>Fall Schedule</p>
-            <h4>*All games take place on Saturday</h4>
 
             <table>
+                <caption>Fall Schedule</caption>
+                <caption>*All games take place on Saturday</caption>
+                <!-- row 0 || table headers -->
                 <tr>
-                    <td>SEPTEMBER</td>
-                    <td>Teams</td>
-                    <td>Location</td>
-                    <td>Times</td>
+                    <th>SEPTEMBER</th>
+                    <th>Teams</th>
+                    <th>Location</th>
+                    <th>Times</th>
                 </tr>
+                <!-- row 1 -->
                 <tr>
-                    <td></td>
+                    <td rowspan="2">9/01</td>
                     <td>U1 and U4</td>
                     <td>AJ Katzenmaier</td>
                     <td>9:30 a.m.</td>
                 </tr>
+                <!-- row 2 -->
                 <tr>
-                    <td>9/01</td>
                     <td>U3 and U2</td>
                     <td>Greenbay</td>
                     <td>1:00 p.m.</td>
                 </tr>
+                <!-- row 3 -->
                 <tr>
-                    <td></td>
+                    <td rowspan="2">9/08</td>
                     <td>U5 and U6</td>
                     <td>Howard A Yeager</td>
                     <td>9:30 a.m.</td>
                 </tr>
+                <!-- row 4 -->
                 <tr>
-                    <td>9/08</td>
                     <td>U6 and U1</td>
                     <td>Marjorie P Hart</td>
                     <td>1:00 p.m.</td>
                 </tr>
+                <!-- row 5 -->
                 <tr>
-                    <td></td>
+                    <td rowspan="2">9/15</td>
                     <td>U2 and U4</td>
                     <td>North</td>
                     <td>9:30 a.m.</td>
                 </tr>
+                <!-- row 6 -->
                 <tr>
-                    <td>9/15</td>
                     <td>U3 and U5</td>
                     <td>AJ Katzenmaier</td>
                     <td>1:00 p.m.</td>
                 </tr>
+                <!-- row 7 -->
                 <tr>
-                    <td></td>
+                    <td rowspan="2">9/22</td>
                     <td>U1 and U3</td>
                     <td>South</td>
                     <td>9:30 a.m.</td>
                 </tr>
+                <!-- row 8 -->
                 <tr>
-                    <td>9/22</td>
                     <td>U2 and U6</td>
                     <td>Howard A Yeager</td>
                     <td>1:00 p.m.</td>
                 </tr>
+                <!-- row 9 -->
                 <tr>
                     <td>9/29</td>
                     <td>U4 and U5</td>
@@ -112,13 +113,11 @@
                 </tr>
             </table>
 
-
             <p>Facility Type: outdoor</p>
             <p>Aditional Information: If deemed necessary by HDML games may be shortened or cancelled due to extreme
                 wheather conditions.</p>
             <p>Please direct all questions to: Michael Randall, League Coordinator</p>
             <p>Phone: (630) 690-8132</p>
-
 
         </article>
     </main>
