rules.html listas finalizadas y otros cambios

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,18 +15,17 @@
     <link rel="stylesheet" href="./assets/styles/design3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
-
 <body>
     <header>
-        <section class="banner">
-            <h1 class="h1">Mighty Ducks Hockey League</h1><!--estaba fuera de -->
-        </section>
-        <section class="subtitle">
+        <div class="banner">
+            <h1 class="h1">Mighty Ducks Hockey League</h1>
+        </div>
+        <div class="subtitle">
             <h2>Upcoming Events</h2>
             <figure class="logo">
                 <img src="./assets/images/logo-mighty-ducks-01.png" alt="logo">
             </figure>
-        </section>
+        </div>
     </header>
     <div class="container-nav-main">
         <nav>
@@ -43,15 +41,13 @@
     </div>
     <main>
         <article>
-            <h3>August 4</h3> <!--🏑📅 usar la proxima--> 
-            <p>MDSL Fundraiser</p>
+            <h3>August 4</h3> <!--🏑 usar la proxima--> 
+            <p>🏑 MDSL Fundraiser</p>
             <h3>August 16</h3>
-            <p>Season Kick-off: Meet the Teams</p>
+            <p>🏑Season Kick-off: Meet the Teams</p>
             <h3>September 1</h3>
-            <p>First Game of the Season (Check Game Schedule for details)</p>
+            <p>🏑 First Game of the Season (Check Game Schedule for details)</p>
         </article>
     </main>
-
 </body>
-
 </html>
