--- a/rules.html
+++ b/rules.html
@@ -13,14 +13,13 @@
     <link rel="stylesheet" href="../assets/styles/design3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
-
 <body>
     <header>
         <section class="banner">
             <h1 class="h1">Mighty Ducks Hockey League</h1><!--estaba fuera de -->
         </section>
         <section class="subtitle">
-            <h2>Rules</h2>
+            <h2>RULES OF PLAY & POLICIES</h2>
             <figure class="logo">
                 <img src="./assets/images/logo-mighty-ducks-01.png" alt="logo">
             </figure>
@@ -40,42 +39,60 @@
     </div>
     <main>
         <article>
-            <h3>Mighty Ducks Hockey League</h3>
-            <h3>RULES OF PLAY & POLICIES</h3>
             <p>IHF rules shall govern MDHL play except as modified herein.</p>
             <h3>SPORTSMANSHIP</h3>
-            <p>The common interest that members of the Association share is to inspire
-                youth to practice the ideals of sportsmanship and fair play. Any player, coach,
-                team, parent, spectator, administrator or referee whose behavior detracts from
-                this purpose is subject to disciplinary action regardless of technical hockey
-                background, expertise, accomplishments or standing.</p>
+            <ul class="sportmanship-all-play">
+                <li>The common interest that members of the Association share is to inspire
+                    youth to practice the ideals of sportsmanship and fair play. Any player, coach,
+                    team, parent, spectator, administrator or referee whose behavior detracts from
+                    this purpose is subject to disciplinary action regardless of technical hockey
+                    background, expertise, accomplishments or standing.
+                </li>
+            </ul>
             <h3>IHF FIELD REGULATIONS</h3>
-            <p>1. DIMENSIONS.IHF Law 1 provides for flexible external field dimensions within
-                a given maximum and minimum width and length. These dimensions should be
-                adhered to for all fields used by teams under 12 and older.</p>
-            <p>2. COMPETITION FIELDS. Fields used within the competition program must be
-                a minimum of 100 x 60 yards.Leagues, districts or associations participating in
-                the state competition program that are unable to provide a field that meets these
-                minimum requirements must advise the State Competition Board which will
-                assign its Fields Committee to inspect the field and recommend to the Board
-                whether or not a waiver of the minimum dimensions should be granted. Teams
-                from leagues, districts or associations that are unable to provide an acceptable
-                field may be required to play all their games away.</p>
-            <p>3. FIELDS USED BY YOUNG AGE GROUPS
-                a. U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
-                for older age groups should be progressively larger.
-                b. U-8 plays on a field 40-50 yards in length and 20-30 yards width.
-                c. U-10 play on a field 70-80 yards in length and 40-50 yards in width.
-                d. In addition, fields used by young age groups may have their internal
-                dimensions and size of goal similarly modified.</p>
+            <ul class="field-regulations">
+                <li><span class="bold-text">DIMENSIONS.IHF. </span>Law 1 provides for flexible external field dimensions within
+                    a given maximum and minimum width and length. These dimensions should be
+                    adhered to for all fields used by teams under 12 and older.
+                </li>
+                <li><span class="bold-text">COMPETITION FIELDS. </span> Fields used within the competition program must be
+                    a minimum of 100 x 60 yards.Leagues, districts or associations participating in
+                    the state competition program that are unable to provide a field that meets these
+                    minimum requirements must advise the State Competition Board which will
+                    assign its Fields Committee to inspect the field and recommend to the Board
+                    whether or not a waiver of the minimum dimensions should be granted. Teams
+                    from leagues, districts or associations that are unable to provide an acceptable
+                    field may be required to play all their games away.
+                </li>
+                <li><span class="bold-text">FIELDS USED BY YOUNG AGE GROUPS.</span>
+                    <ul class="fields-young">
+                        <li>
+                            U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields for older age groups should be progressively larger.
+                        </li>
+                        <li>
+                            U-8 plays on a field 40-50 yards in length and 20-30 yards width.
+                        </li>
+                        <li>
+                            U-10 play on a field 70-80 yards in length and 40-50 yards in width.
+                        </li>
+                        <li>
+                            In addition, fields used by young age groups may have their internal dimensions and size of goal similarly modified.
+                        </li>
+                    </ul>
+                </li>
+            </ul>
             <h3>ALL-PLAY</h3>
-            <p>All-play means that every recreation player on every team shall play atleast
+            <ul class="sportmanship-all-play">
+                <li>All-play means that every recreation player on every team shall play atleast
                 fifty percent of each game. Coaches in the competition program are encouraged
-                to play their players 50% of each game.</p>
-            <p>o A Coach shall be permitted to not play a player 50% of each game
-                under special circumstances, e.g., unexcused absences from practice
-                and/or games, ungentlemanly conduct at practice and/or games, and
-                injuries.</p>
+                to play their players 50% of each game.
+                    <ul>
+                        <li class="all-play">A Coach shall be permitted to not play a player 50% of each game under special circumstances, e.g., 
+                            unexcused absences from practice and/or games, ungentlemanly conduct at practice and/or games, and injuries.
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </article>
     </main>
 
