rama3 fin - se cambio el diseño

--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,33 +15,27 @@
     <link rel="stylesheet" href="../assets/styles/design3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
-
 <body>
     <header>
-        <section class="banner">
-            <h1 class="h1">Mighty Ducks Hockey League</h1>
-        </section>
-        <section class="subtitle">
-            <h2>About <span>MDHL</span></h2>
-            <figure class="logo">
-                <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo">
-            </figure>
-        </section>
-    </header>
-    <div class="container-nav-main">
+        <figure class="logo">
+            <a href="./index.html"><img src="./assets/images/logo-mighty-ducks-01.png" alt="logo"></a>
+        </figure>
         <nav>
             <a href="./index.html">Home</a>
-            <a href="#">About <span>MDHL</span></a>
+            <a href="#">About</a>
             <a href="./contact.html">Contact</a>
             <a href="./rules.html">Rules</a>
-            <a href="./gameInfo.html">Game Information</a>
+            <a href="./game-info.html">Game Information</a>
         </nav>
-        <figure class="img-hockey">
-            <img src="../assets/images/hockey2.jpg" alt="hockey2">
-        </figure>    
+    </header>
+    <div class="banner">
+        <h1 class="h1">Mighty Ducks Hockey League</h1>
+    </div>
+    <div class="subtitle">
+        <h2>About <span>MDHL</span></h2>
     </div>
     <main>
-        <article>
+        <article class="content">
             <h3>Mission</h3>
             <p> To support young athletes living Chicago's northside neighborhood, who have an interest in
                 learning and playing soccer, with opportunities to learn and practice skills related to the game of
@@ -57,8 +50,9 @@
                 neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
                 parents and previous league members</p>
         </article>
+        <figure class="img-hockey">
+            <img src="../assets/images/hockey2.jpg" alt="hockey2">
+        </figure>        
     </main>
-
 </body>
-
 </html>
