--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,31 +18,31 @@
 </head>
 <body>
     <header>
-        <section class="banner">
-            <h1 class="h1">Mighty Ducks Hockey League</h1>
-        </section>
-        <section class="subtitle">
-            <h2>Contact</h2>
-            <figure class="logo">
-                <img src="../assets/images/logo-mighty-ducks-01.png" alt="logo">
-            </figure>
-        </section>
-    </header>
-    <div class="container-nav-main">
+        <figure class="logo">
+            <a href="./index.html"><img src="./assets/images/logo-mighty-ducks-01.png" alt="logo"></a>
+        </figure>
         <nav>
             <a href="./index.html">Home</a>
-            <a href="./aboutMDHL.html">About <span>MDHL</span></a>
+            <a href="./about.html">About</a>
             <a href="#">Contact</a>
             <a href="./rules.html">Rules</a>
-            <a href="./gameInfo.html">Game Information</a>
+            <a href="./game-info.html">Game Information</a>
         </nav>
-        <figure class="img-hockey">
-            <img src="../assets/images/hockey3.jpg" alt="hockey3">
-        </figure>
+    </header>
+    <div class="banner">
+        <h1 class="h1">Mighty Ducks Hockey League</h1>
+    </div>
+    <div class="subtitle">
+        <h2>Contact</h2>
     </div>
     <main>
-        <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-        <p>We reply to your email as soon as we can.</p>
+        <div class="cont-radius">
+            <h4>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></h4>
+            <p>We reply to your email as soon as we can.</p>   
+            <figure class="img-hockey img-hockey-contact">
+                <img src="../assets/images/hockey3.jpg" alt="hockey3">
+            </figure>
+        </div>
     </main>
 
 </body>
