--- a/index.html
+++ b/index.html
@@ -17,37 +17,35 @@
 </head>
 <body>
     <header>
-        <div class="banner">
-            <h1 class="h1">Mighty Ducks Hockey League</h1>
-        </div>
-        <div class="subtitle">
-            <h2>Upcoming Events</h2>
-            <figure class="logo">
-                <img src="./assets/images/logo-mighty-ducks-01.png" alt="logo">
-            </figure>
-        </div>
-    </header>
-    <div class="container-nav-main">
+        <figure class="logo">
+            <a href="./index.html"><img src="./assets/images/logo-mighty-ducks-01.png" alt="logo"></a>
+        </figure>
         <nav>
             <a href="#">Home</a>
-            <a href="./aboutMDHL.html">About <span>MDHL</span></a>
+            <a href="./about.html">About</a>
             <a href="./contact.html">Contact</a>
             <a href="./rules.html">Rules</a>
-            <a href="./gameInfo.html">Game Information</a>
+            <a href="./game-info.html">Game Information</a>
         </nav>
-        <figure class="img-hockey" >
-            <img src="./assets/images/hockey1.jpg" alt="hockey1">
-        </figure>   
+    </header>
+    <div class="banner">
+        <h1 class="h1">Mighty Ducks Hockey League</h1>
+    </div>
+    <div class="subtitle">
+        <h2>Upcoming Events</h2>
     </div>
     <main>
-        <article>
-            <h3>August 4</h3> <!--🏑 usar la proxima--> 
-            <p>🏑 MDSL Fundraiser</p>
+        <article class="content">
+            <h3>August 4</h3>
+            <p>🏑MDSL Fundraiser</p>
             <h3>August 16</h3>
             <p>🏑Season Kick-off: Meet the Teams</p>
             <h3>September 1</h3>
-            <p>🏑 First Game of the Season (Check Game Schedule for details)</p>
+            <p>🏑First Game of the Season (Check Game Schedule for details)</p>
         </article>
+        <figure class="img-hockey img-home">
+            <img src="./assets/images/hockey1.jpg" alt="hockey1">
+        </figure>
     </main>
 </body>
 </html>
