--- a/rules.html
+++ b/rules.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,30 +17,25 @@
 </head>
 <body>
     <header>
-        <section class="banner">
-            <h1 class="h1">Mighty Ducks Hockey League</h1><!--estaba fuera de -->
-        </section>
-        <section class="subtitle">
-            <h2>RULES OF PLAY & POLICIES</h2>
-            <figure class="logo">
-                <img src="./assets/images/logo-mighty-ducks-01.png" alt="logo">
-            </figure>
-        </section>
-    </header>
-    <div class="container-nav-main">
+        <figure class="logo">
+            <a href="./index.html"><img src="./assets/images/logo-mighty-ducks-01.png" alt="logo"></a>
+        </figure>
         <nav>
             <a href="./index.html">Home</a>
-            <a href="./aboutMDHL.html">About <span>MDHL</span></a>
+            <a href="./about.html">About</a>
             <a href="./contact.html">Contact</a>
             <a href="#">Rules</a>
-            <a href="./gameInfo.html">Game Information</a>
+            <a href="./game-info.html">Game Information</a>
         </nav>
-        <figure class="img-hockey" >
-            <img src="./assets/images/hockey1.jpg" alt="hockey1">
-        </figure>   
+    </header>
+    <div class="banner">
+        <h1 class="h1">Mighty Ducks Hockey League</h1><!--estaba fuera de -->
+    </div>
+    <div class="subtitle">
+        <h2>RULES OF PLAY & POLICIES</h2>
     </div>
     <main>
-        <article>
+        <article class="cont-radius">
             <p>IHF rules shall govern MDHL play except as modified herein.</p>
             <h3>SPORTSMANSHIP</h3>
             <ul class="sportmanship-all-play">
@@ -95,7 +92,5 @@
             </ul>
         </article>
     </main>
-
 </body>
-
 </html>
