--- a/about.html
+++ b/about.html
@@ -6,13 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <link rel="shortcut icon" href="../assets/images/logo.ico" type="image/x-icon">
-    <!-- estilos de diseño N°1 -->
-    <!-- <link rel="stylesheet" href="../assets/styles/design1.css"> -->
-    <!-- estilos de diseño N°2 -->
-    <!-- <link rel="stylesheet" href="../assets/styles/design2.css"> -->
-    <!-- estilos de diseño N°3 -->
-    <link rel="stylesheet" href="../assets/styles/design3.css">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/styles/design3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
@@ -26,13 +21,14 @@
             <a href="./contact.html">Contact</a>
             <a href="./rules.html">Rules</a>
             <a href="./game-info.html">Game Information</a>
+            <a href="./registration.html">Registration</a>
         </nav>
     </header>
     <div class="banner">
         <h1 class="h1">Mighty Ducks Hockey League</h1>
     </div>
     <div class="subtitle">
-        <h2>About <span>MDHL</span></h2>
+        <h2>About</h2>
     </div>
     <main>
         <article class="content">
@@ -51,7 +47,7 @@
                 parents and previous league members</p>
         </article>
         <figure class="img-hockey">
-            <img src="../assets/images/hockey2.jpg" alt="hockey2">
+            <img src="./assets/images/hockey2.jpg" alt="hockey2">
         </figure>        
     </main>
 </body>
