--- a/game-info.html
+++ b/game-info.html
@@ -7,12 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
-    <!-- estilos de diseño N°1 -->
-    <!-- <link rel="stylesheet" href="./assets/styles/design1.css"> -->
-    <!-- estilos de diseño N°2 -->
-    <!-- <link rel="stylesheet" href="./assets/styles/design2.css"> -->
-    <!-- estilos de diseño N°3 -->
-    <link rel="stylesheet" href="../assets/styles/design3.css">
+    <link rel="stylesheet" href="./assets/styles/design3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
@@ -26,6 +21,7 @@
             <a href="./contact.html">Contact</a>
             <a href="./rules.html">Rules</a>
             <a href="#">Game Information</a>
+            <a href="./registration.html">Registration</a>
         </nav>    
     </header>
     <div class="banner">
@@ -44,6 +40,7 @@
                     <th>SEPTEMBER</th>
                     <th>Teams</th>
                     <th>Location</th>
+                    <th>Map</th>
                     <th>Times</th>
                 </tr>
                 <!-- row 1 -->
@@ -51,12 +48,18 @@
                     <td rowspan="2">9/01</td>
                     <td>U1 and U4</td>
                     <td>AJ Katzenmaier</td>
+                    <td>
+                        <iframe title="AJ Katzenmaier" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.2209285952194!2d-87.86404503942913!3d42.32577078454338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1647189187659!5m2!1ses-419!2sar"></iframe>
+                    </td>
                     <td>9:30 a.m.</td>
                 </tr>
                 <!-- row 2 -->
                 <tr>
                     <td>U3 and U2</td>
                     <td>Greenbay</td>
+                    <td>
+                        <iframe title="Greenbay" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6041622.540994987!2d-87.868864!3d42.320964!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x740a7a7d548adce1!2sGreen%20Bay%20School%20(Pre-K)!5e0!3m2!1ses-419!2sar!4v1647191549518!5m2!1ses-419!2sar"></iframe>    
+                    </td>
                     <td>1:00 p.m.</td>
                 </tr>
                 <!-- row 3 -->
@@ -64,12 +67,18 @@
                     <td rowspan="2">9/08</td>
                     <td>U5 and U6</td>
                     <td>Howard A Yeager</td>
+                    <td>
+                        <iframe title="Howard A Yeager" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d188817.28484605736!2d-87.85388100000002!3d42.315438!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1647191617821!5m2!1ses-419!2sar"></iframe>
+                    </td>
                     <td>9:30 a.m.</td>
                 </tr>
                 <!-- row 4 -->
                 <tr>
                     <td>U6 and U1</td>
                     <td>Marjorie P Hart</td>
+                    <td>
+                        <iframe title="Marjorie P Hart" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d188782.099577942!2d-87.84569000000002!3d42.327164!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses-419!2sar!4v1647191655029!5m2!1ses-419!2sar"></iframe>
+                    </td>
                     <td>1:00 p.m.</td>
                 </tr>
                 <!-- row 5 -->
@@ -77,12 +86,18 @@
                     <td rowspan="2">9/15</td>
                     <td>U2 and U4</td>
                     <td>North</td>
+                    <td>
+                        <iframe title="North" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48649593.537920766!2d-87.646123!3d41.90714500000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5736e62f19086c62!2sNorth%20Elementary!5e0!3m2!1ses-419!2sar!4v1647191673305!5m2!1ses-419!2sar"></iframe>    
+                    </td>
                     <td>9:30 a.m.</td>
                 </tr>
                 <!-- row 6 -->
                 <tr>
                     <td>U3 and U5</td>
                     <td>AJ Katzenmaier</td>
+                    <td>
+                        <iframe title="AJ Katzenmaier" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.2209285952194!2d-87.86404503942913!3d42.32577078454338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1647189187659!5m2!1ses-419!2sar"></iframe>
+                    </td>
                     <td>1:00 p.m.</td>
                 </tr>
                 <!-- row 7 -->
@@ -90,12 +105,18 @@
                     <td rowspan="2">9/22</td>
                     <td>U1 and U3</td>
                     <td>South</td>
+                    <td >
+                        <iframe title="South" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48335973.71119177!2d-87.854593!3d42.317067!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sar!4v1647191749373!5m2!1ses-419!2sar"></iframe>
+                    </td>
                     <td>9:30 a.m.</td>
                 </tr>
                 <!-- row 8 -->
                 <tr>
                     <td>U2 and U6</td>
                     <td>Howard A Yeager</td>
+                    <td>
+                        <iframe title="Howard A Yeager" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d188817.28484605736!2d-87.85388100000002!3d42.315438!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1647191617821!5m2!1ses-419!2sar"></iframe>
+                    </td>
                     <td>1:00 p.m.</td>
                 </tr>
                 <!-- row 9 -->
@@ -103,6 +124,9 @@
                     <td>9/29</td>
                     <td>U4 and U5</td>
                     <td>Greenbay</td>
+                    <td>
+                        <iframe title="Greenbay" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6041622.540994987!2d-87.868864!3d42.320964!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x740a7a7d548adce1!2sGreen%20Bay%20School%20(Pre-K)!5e0!3m2!1ses-419!2sar!4v1647191549518!5m2!1ses-419!2sar"></iframe>    
+                    </td>
                     <td>9:30 p.m.</td>
                 </tr>
             </table>
