--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <link rel="shortcut icon" href="../assets/images/logo.ico" type="image/x-icon">
-    <!-- estilos de diseño N°1 -->
-    <!-- <link rel="stylesheet" href="../assets/styles/design1.css"> -->
-    <!-- Estilos ocultos -->
-    <!-- estilos de diseño N°2 -->
-    <!-- <link rel="stylesheet" href="../assets/styles/design2.css"> -->
-    <!-- estilos de diseño N°3 -->
-    <link rel="stylesheet" href="../assets/styles/design3.css">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/styles/design3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
@@ -27,6 +21,7 @@
             <a href="#">Contact</a>
             <a href="./rules.html">Rules</a>
             <a href="./game-info.html">Game Information</a>
+            <a href="./registration.html">Registration</a>
         </nav>
     </header>
     <div class="banner">
@@ -40,7 +35,7 @@
             <h4>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></h4>
             <p>We reply to your email as soon as we can.</p>   
             <figure class="img-hockey img-hockey-contact">
-                <img src="../assets/images/hockey3.jpg" alt="hockey3">
+                <img src="./assets/images/hockey3.jpg" alt="hockey3">
             </figure>
         </div>
     </main>
