--- a/show-data.html
+++ b/show-data.html
@@ -26,7 +26,7 @@
       <a href="./contact.html">Contact</a>
       <a href="./rules.html">Rules</a>
       <a href="./game-info.html">Game Information</a>
-      <a href="#">Registration</a>
+      <a href="registration.html">Registration</a>
     </nav>
   </header>
   <div class="subtitle">
